--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,8 @@
   ],
   "dependencies": {
     "bootstrap": "^3.3.6",
-    "font-awesome": "^4.5.0"
+    "font-awesome": "^4.5.0",
+    "bootstrap-checkbox-x": "^1.5.4",
+    "material-design-iconic-font": "^2.2.0"
   }
 }
