--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "slim/slim": "^3.1",
         "slim/php-view": "^2.0",
         "monolog/monolog": "^1.17",
-        "slim/twig-view": "^2.1"
+        "slim/twig-view": "^2.1",
+        "illuminate/database": "^5.2",
+        "gabordemooij/redbean": "dev-master"
     },
     "autoload": {
         "psr-4": {
